# yandex-keyboard-desktop

./: .gitignore  .metadata  LICENSE  README.md  analysis_options.yaml  config.json  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: artifacts.yml  quality.yml
android/app/: build.gradle
integration_test/: desktop_workflow_test.dart
ios/: Podfile
ios/KeyboardExtension/: Build.xcconfig  Info.plist  KeyboardExtension.entitlements  KeyboardLayout.swift  KeyboardSettings.swift  KeyboardTransaction.swift  KeyboardTransformationService.swift  KeyboardViewController.swift  Localizable.xcstrings
ios/Runner/: AppDelegate.swift  Info.plist  KeyboardSettingsBridge.swift  PrivacyInfo.xcprivacy
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/RunnerTests/: KeyboardExtensionTests.swift  RunnerTests.swift
lib/: config.dart  config_manager.dart  config_window.dart  hotkey_service.dart  loading_animation.dart  main.dart  options_widget.dart  tray_manager.dart  window_service.dart
lib/bloc/: text_bloc.dart  text_event.dart  text_processing_type.dart  text_state.dart
lib/l10n/: app_en.arb  app_en_XA.arb  app_ru.arb
lib/platform/: linux_platform_service.dart  platform_service.dart  platform_service_macos.dart  platform_service_windows.dart
lib/src/app/: bootstrap.dart  (+5 more)
lib/widgets/: floating_window.dart  loading_animation.dart  options_widget.dart
linux/: CMakeLists.txt  linux_native_bridge_plugin.cc  linux_native_bridge_plugin.h  my_application.cc  my_application.h  wayland_global_shortcuts_plugin.cc  wayland_global_shortcuts_plugin.h  wayland_global_shortcuts_portal.cc  wayland_global_shortcuts_portal.h  x11_clipboard_reader.cc  x11_clipboard_reader.h  x11_clipboard_transaction.cc  x11_clipboard_transaction.h
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/tests/: CMakeLists.txt  linux_native_bridge_plugin_lifecycle_test.cc  wayland_global_shortcuts_plugin_contract_test.cc  wayland_global_shortcuts_portal_test.cc  x11_clipboard_reader_test.cc  x11_clipboard_transaction_test.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
packaging/linux/: io.github.oniel.yandex_keyboard_desktop.desktop
test/: widget_test.dart
test/app/: desktop_surface_test.dart  desktop_visual_preferences_test.dart  ios_host_app_test.dart
test/goldens/: flat_ui_golden_test.dart
test/tool/: check_coverage_test.dart  check_dependency_licenses_test.dart  check_ios_app_test.dart  check_pub_security_test.dart  check_windows_portable_test.dart  check_xccov_test.dart
tool/: check_coverage.dart  check_dependency_licenses.dart  check_ios_app.py  check_linux_deb.sh  check_no_material_desktop_ui.py  check_pub_security.dart  check_windows_portable.py  check_xccov.dart  package_linux_deb.sh  run_linux_focus_contract.sh  smoke_linux_deb_container.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  native_clipboard_broker.cpp  native_clipboard_broker.h  native_clipboard_snapshot.cpp  native_clipboard_snapshot.h  resource.h  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+113 files in other folders)
